[ANALYZER-639] Fix for gembar placeholder drop zone. Removed default panel scrolling, nowraps on some labels

--- a/package-res/resources/web/dojo/dijit/themes/pentaho/layout/LayoutPanel.css
+++ b/package-res/resources/web/dojo/dijit/themes/pentaho/layout/LayoutPanel.css
@@ -110,6 +110,7 @@
 
 .gemPlaceholder.over{
   background-color: #FFFFCC;
+  white-space: nowrap;
 }
 .pentahoPropertiesPanel .propPanel_gemBar{
   position: relative;
