--- a/package-res/resources/web/dojo/dijit/themes/pentaho/pentaho.css
+++ b/package-res/resources/web/dojo/dijit/themes/pentaho/pentaho.css
@@ -79,6 +79,3 @@
     width:14px;
     height:12px;
 }
-.dijitTitlePane{
-  overflow: auto;
-}
